// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNotifications /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with admin user 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-bjUoiL cqBeFF forms__component forms__component__text-box"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-fLlhyt blkTEN"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="forms__component forms__component__text-box"
      placeholder="Type"
    >
      <div
        class="sc-bjUoiL cqBeFF"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-ivTmOn cEjiJV"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-evZas jzlNIL forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-notifications__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload notifications
      </span>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM cPvpns"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loadError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-bjUoiL cqBeFF forms__component forms__component__text-box"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-fLlhyt blkTEN"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="forms__component forms__component__text-box"
      placeholder="Type"
    >
      <div
        class="sc-bjUoiL cqBeFF"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-llJcti eKkrfK"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-evZas jzlNIL forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-notifications__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload notifications
      </span>
    </button>
  </div>
  <span
    class="sc-fnykZs kIjAem"
  >
    <span
      class="sc-fEOsli gvMThL"
    >
      Could not load notifications
      <br />
      Something went wrong
    </span>
  </span>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-bjUoiL cqBeFF forms__component forms__component__text-box"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-fLlhyt blkTEN"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="forms__component forms__component__text-box"
      placeholder="Type"
    >
      <div
        class="sc-bjUoiL cqBeFF"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cxabCf fhbBrT"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-evZas jzlNIL forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-evZas juxlAL admin-notifications__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-ksZaOG idpoLe"
      >
        Reload notifications
      </span>
      <div
        aria-hidden="true"
        class="sc-hAZoDl eImVmd button__loading-spinner"
      >
        <div
          class="sc-iqcoie jUFsFD"
        >
          <div
            class="sc-crXcEl bnEQQz"
          />
          <div
            class="sc-crXcEl REdYz"
          />
          <div
            class="sc-crXcEl cnIsZI"
          />
          <div
            class="sc-crXcEl jStvKR"
          />
          <div
            class="sc-crXcEl dliQGu"
          />
          <div
            class="sc-crXcEl jyzewH"
          />
          <div
            class="sc-crXcEl jSmUjv"
          />
          <div
            class="sc-crXcEl jVOpOT"
          />
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with notifications 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-bjUoiL cqBeFF forms__component forms__component__text-box"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-fLlhyt blkTEN"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="forms__component forms__component__text-box"
      placeholder="Type"
    >
      <div
        class="sc-bjUoiL cqBeFF"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-iIPllB kfUAeU"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-bBrHrO DteqK"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-evZas jzlNIL forms__component forms__component__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-notifications__control"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload notifications
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--success"
    >
      message1
    </div>
    <button
      class="sc-evZas kXOxkW outer"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Remove
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--warn"
    >
      message2
    </div>
    <button
      class="sc-evZas kXOxkW outer"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Remove
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--error"
    >
      message3
    </div>
    <button
      class="sc-evZas kXOxkW outer"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Remove
      </span>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with user 1`] = `
<div>
  <div
    class="section__outer"
  >
    <h2
      class="section__heading"
      id="admin-only"
    >
      Admin only
    </h2>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
